# AI-OnScreenAssistant

./: .gitignore  CMakeLists.txt  ControlPanel.qml  GroqAPI.cpp  GroqAPI.h  Main.qml  Overlay.qml  OverlayWindow.qml  README.md  ResultSection.qml  main.cpp
